--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/pubs?serverTimezone=UTC
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+ 
+# Enabling H2 Console
+spring.h2.console.enabled=true
+ 
+# Custom H2 Console URL
+spring.h2.console.path=/h2-console
